--- a/index (1).html
+++ b/index (1).html
@@ -358,5 +358,11 @@
       document.getElementById("highscore").textContent = highscore;
     };
   </script>
+<div style="margin-top: 30px;">
+  <a href="index.html">
+    <button>🔙 回首頁</button>
+  </a>
+</div>
+
 </body>
 </html>
