--- a/lesson4.html
+++ b/lesson4.html
@@ -355,9 +355,16 @@
     window.onload = () => {
       document.getElementById("highscore").textContent = highscore;
     };
-  </script>
+    </script>
+<div style="margin-top: 30px;">
+  <a href="index.html">
+    <button>🔙 回首頁</button>
+  </a>
+</div>
+
 </body>
 </html>
+
 
 
 
