--- a/lesson4.html
+++ b/lesson4.html
@@ -355,7 +355,11 @@
     window.onload = () => {
       document.getElementById("highscore").textContent = highscore;
     };
-    </script>
+   <script>
+  // ... 你整個 JavaScript 程式碼 ...
+</script>
+
+<!-- 放這裡是正確的 ✅ -->
 <div style="margin-top: 30px;">
   <a href="index.html">
     <button>🔙 回首頁</button>
