--- a/lesson4.html
+++ b/lesson4.html
@@ -152,42 +152,58 @@
         { jp: "どういたしまして", zh: "不客氣" }
       ],
      "第6課": [
-    { "jp": "食べます", "zh": "吃" },
-    { "jp": "飲みます", "zh": "喝" },
-    { "jp": "吸います", "zh": "吸（煙）" },
-    { "jp": "見ます", "zh": "看" },
-    { "jp": "聞きます", "zh": "聽" },
-    { "jp": "読みます", "zh": "讀" },
-    { "jp": "書きます", "zh": "寫" },
-    { "jp": "買います", "zh": "買" },
-    { "jp": "撮ります", "zh": "拍（照）" },
-    { "jp": "会います", "zh": "見面" },
-    { "jp": "ご飯", "zh": "飯" },
-    { "jp": "朝ご飯", "zh": "早餐" },
-    { "jp": "昼ご飯", "zh": "午餐" },
-    { "jp": "晩ご飯", "zh": "晚餐" },
-    { "jp": "卵", "zh": "蛋" },
-    { "jp": "肉", "zh": "肉" },
-    { "jp": "魚", "zh": "魚" },
-    { "jp": "野菜", "zh": "蔬菜" },
-    { "jp": "果物", "zh": "水果" },
-    { "jp": "水", "zh": "水" },
-    { "jp": "お茶", "zh": "茶" },
-    { "jp": "紅茶", "zh": "紅茶" },
-    { "jp": "牛乳", "zh": "牛奶" },
-    { "jp": "ジュース", "zh": "果汁" },
-    { "jp": "ビール", "zh": "啤酒" },
-    { "jp": "お酒", "zh": "酒" },
-    { "jp": "たばこ", "zh": "香菸" },
-    { "jp": "手紙", "zh": "信" },
-    { "jp": "写真", "zh": "照片" },
-    { "jp": "ビデオ", "zh": "錄影帶" },
-    { "jp": "レポート", "zh": "報告" },
-    { "jp": "店", "zh": "商店" },
-    { "jp": "庭", "zh": "庭院" },
-    { "jp": "友達", "zh": "朋友" },
-    { "jp": "花見", "zh": "賞花" }
-]
+  { jp: "食べます", zh: "吃" },
+  { jp: "飲みます", zh: "喝" },
+  { jp: "吸います", zh: "吸（香菸等）" },
+  { jp: "見ます", zh: "看" },
+  { jp: "聞きます", zh: "聽" },
+  { jp: "読みます", zh: "閱讀" },
+  { jp: "書きます", zh: "書寫" },
+  { jp: "買います", zh: "購買" },
+  { jp: "撮ります", zh: "拍攝（照片）" },
+  { jp: "します", zh: "做" },
+  { jp: "会います", zh: "見面（與朋友）" },
+  { jp: "ごはん", zh: "白飯、飯" },
+  { jp: "朝ごはん", zh: "早餐" },
+  { jp: "昼ごはん", zh: "午餐" },
+  { jp: "晩ごはん", zh: "晚餐" },
+  { jp: "パン", zh: "麵包" },
+  { jp: "卵", zh: "蛋" },
+  { jp: "肉", zh: "肉" },
+  { jp: "魚", zh: "魚" },
+  { jp: "野菜", zh: "蔬菜" },
+  { jp: "果物", zh: "水果" },
+  { jp: "水", zh: "水" },
+  { jp: "お茶", zh: "茶" },
+  { jp: "紅茶", zh: "紅茶" },
+  { jp: "牛乳", zh: "牛奶" },
+  { jp: "ジュース", zh: "果汁" },
+  { jp: "ビール", zh: "啤酒" },
+  { jp: "お酒", zh: "酒類、日本酒" },
+  { jp: "たばこ", zh: "香菸" },
+  { jp: "手紙", zh: "信" },
+  { jp: "レポート", zh: "報告" },
+  { jp: "写真", zh: "照片" },
+  { jp: "ビデオ", zh: "影片、錄影帶" },
+  { jp: "店", zh: "商店" },
+  { jp: "庭", zh: "庭院、院子" },
+  { jp: "宿題", zh: "作業" },
+  { jp: "テニス", zh: "網球" },
+  { jp: "サッカー", zh: "足球" },
+  { jp: "花見", zh: "賞花" },
+  { jp: "何", zh: "什麼" },
+  { jp: "いっしょに", zh: "一起" },
+  { jp: "ちょっと", zh: "一會兒、一點點" },
+  { jp: "いつも", zh: "總是" },
+  { jp: "ときどき", zh: "有時" },
+  { jp: "それから", zh: "然後" },
+  { jp: "ええ", zh: "是的" },
+  { jp: "いいですね。", zh: "好啊" },
+  { jp: "わかりました。", zh: "我明白了" },
+  { jp: "何ですか。", zh: "什麼事？" },
+  { jp: "じゃ、また[あした]。", zh: "那麼，明天再見。" }
+];
+
     };
     let lockedWords = [], currentWord = {}, score = 0, correctCount = 0, totalCount = 0;
     let highscore = localStorage.getItem("highscore") || 0;
