--- a/lesson4.html
+++ b/lesson4.html
@@ -151,19 +151,26 @@
         { jp: "急行（きゅうこう）", zh: "快車" }, { jp: "特急（とっきゅう）", zh: "特快車" }, { jp: "ありがとう ございました", zh: "謝謝（過去式）" },
         { jp: "どういたしまして", zh: "不客氣" }
       ],
-      "第6課": [
-        { jp: "買います", zh: "買" }, { jp: "売ります", zh: "賣" }, { jp: "取ります", zh: "拿" },
-        { jp: "書きます", zh: "寫" }, { jp: "読みます", zh: "讀" }, { jp: "聞きます", zh: "聽" },
-        { jp: "見ます", zh: "看" }, { jp: "電話します", zh: "打電話" }, { jp: "歩きます", zh: "走路" },
-        { jp: "遊びます", zh: "玩" }, { jp: "泳ぎます", zh: "游泳" }, { jp: "寝ます", zh: "睡覺" },
-        { jp: "起きます", zh: "起床" }, { jp: "食べます", zh: "吃" }, { jp: "飲みます", zh: "喝" },
-        { jp: "昼食", zh: "午餐" }, { jp: "晩御飯", zh: "晚餐" }, { jp: "朝食", zh: "早餐" },
-        { jp: "ホテル", zh: "飯店" }, { jp: "レストラン", zh: "餐廳" }, { jp: "コーヒー", zh: "咖啡" },
-        { jp: "紅茶", zh: "紅茶" }, { jp: "ジュース", zh: "果汁" }, { jp: "ビール", zh: "啤酒" },
-        { jp: "パン", zh: "麵包" }, { jp: "ご飯", zh: "飯" }, { jp: "野菜", zh: "蔬菜" },
-        { jp: "果物", zh: "水果" }, { jp: "肉", zh: "肉" }, { jp: "魚", zh: "魚" },
-        { jp: "卵", zh: "蛋" }
-      ]
+     "第6課": [
+  { jp: "買います", zh: "買" }, { jp: "売ります", zh: "賣" }, { jp: "取ります", zh: "拿" },
+  { jp: "書きます", zh: "寫" }, { jp: "読みます", zh: "讀" }, { jp: "聞きます", zh: "聽" },
+  { jp: "見ます", zh: "看" }, { jp: "電話します", zh: "打電話" }, { jp: "歩きます", zh: "走路" },
+  { jp: "遊びます", zh: "玩" }, { jp: "泳ぎます", zh: "游泳" }, { jp: "寝ます", zh: "睡覺" },
+  { jp: "起きます", zh: "起床" }, { jp: "食べます", zh: "吃" }, { jp: "飲みます", zh: "喝" },
+  { jp: "吸います", zh: "吸（香菸等）" }, { jp: "昼食", zh: "午餐" }, { jp: "晩御飯", zh: "晚餐" },
+  { jp: "朝食", zh: "早餐" }, { jp: "ホテル", zh: "飯店" }, { jp: "レストラン", zh: "餐廳" },
+  { jp: "コーヒー", zh: "咖啡" }, { jp: "紅茶", zh: "紅茶" }, { jp: "ジュース", zh: "果汁" },
+  { jp: "ビール", zh: "啤酒" }, { jp: "パン", zh: "麵包" }, { jp: "ご飯", zh: "飯" },
+  { jp: "野菜", zh: "蔬菜" }, { jp: "果物", zh: "水果" }, { jp: "肉", zh: "肉" },
+  { jp: "魚", zh: "魚" }, { jp: "卵", zh: "蛋" }, { jp: "たばこ", zh: "香菸" },
+  { jp: "てがみ", zh: "信" }, { jp: "レポート", zh: "報告" }, { jp: "しゃしん", zh: "照片" },
+  { jp: "ビデオ", zh: "影片、錄影帶" }, { jp: "みせ", zh: "商店" }, { jp: "にわ", zh: "庭院、院子" },
+  { jp: "しゅくだい", zh: "作業" }, { jp: "テニス", zh: "網球" }, { jp: "サッカー", zh: "足球" },
+  { jp: "[お]はなみ", zh: "賞花" }, { jp: "なに", zh: "什麼" }, { jp: "いっしょに", zh: "一起" },
+  { jp: "ちょっと", zh: "一會兒、一點點" }, { jp: "いつも", zh: "總是" }, { jp: "ときどき", zh: "有時" },
+  { jp: "それから", zh: "然後" }, { jp: "ええ", zh: "是的" }, { jp: "いいですね。", zh: "好啊" },
+  { jp: "わかりました。", zh: "我明白了" }, { jp: "なんですか。", zh: "什麼事？" }, { jp: "じゃ、また[あした]。", zh: "那麼，明天再見。" }
+]
     };
    let lockedWords = [], currentWord = {}, score = 0, correctCount = 0, totalCount = 0;
     let highscore = localStorage.getItem("highscore") || 0;
