--- a/lesson7.html
+++ b/lesson7.html
@@ -1,1 +1,444 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <title>第7課～第9課 自選單字練習</title>
+  <style>
+    body {
+      font-family: "Helvetica Neue", sans-serif;
+      background-color: #ffe4f0;
+      color: #333;
+      padding: 20px;
+      text-align: center;
+    }
+    .lesson {
+      background: #fff0f5;
+      padding: 10px;
+      margin: 20px auto;
+      width: fit-content;
+      border-radius: 12px;
+      text-align: left;
+    }
+    .lesson h3 {
+      margin-top: 0;
+    }
+    .option-button {
+      background-color: #fff;
+      margin: 5px;
+      padding: 10px 20px;
+      border: 2px solid #ff99cc;
+      border-radius: 12px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button {
+      padding: 10px 16px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      background-color: #ffccdd;
+      cursor: pointer;
+    }
+    #result {
+      margin-top: 10px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+    #question {
+      font-size: 22px;
+      margin: 20px 0;
+    }
+    #quizArea {
+      margin-top: 30px;
+      padding: 20px;
+      background: #fffafc;
+      border-radius: 12px;
+    }
+  </style>
+</head>
+<body>
+  <h1>第7～9課 自選單字練習</h1>
+
+  <div>
+    題目方向：
+    <select id="modeSelect" onchange="changeMode()">
+      <option value="jpToZh">日文 ➡ 中文（預設）</option>
+      <option value="zhToJp">中文 ➡ 日文</option>
+    </select>
+  </div>
+
+  <div>
+    題型選擇：
+    <select id="typeSelect" onchange="changeType()">
+      <option value="choice">選擇題（預設）</option>
+      <option value="input">打字題</option>
+    </select>
+  </div>
+
+  <div>
+    選擇課次：
+    <select id="lessonSelect" onchange="updateWordList()">
+      <option value="">-- 請選擇課次 --</option>
+      <option value="第4課">第4課</option>
+      <option value="第5課">第5課</option>
+      <option value="第6課">第6課</option>
+    </select>
+  </div>
+
+  <div id="wordSelection"></div>
+
+  <button onclick="startQuiz()">▶️ 開始測驗</button>
+  <button onclick="unlockSelection()">🔁 重新選單字</button>
+
+  <div id="quizArea">
+    <div id="question">← 點上方按鈕開始練習</div>
+    <div id="options"></div>
+    <div id="result"></div>
+    <div>
+      分數：<span id="score">0</span><br>
+      最高分：<span id="highscore">0</span><br>
+      答對率：<span id="accuracy">0%</span>（<span id="correct">0</span> / <span id="total">0</span> 題）
+    </div>
+    <button onclick="speakWord()">🔊 朗讀日文</button>
+    <button onclick="resetScore()">🔁 重置分數</button>
+  </div>
+
+  <div id="endScreen" style="display: none; margin-top: 20px; text-align: center;">
+    <h3>🎉 測驗完成！</h3>
+    <p>你的總得分是：<span id="finalScore">0</span> 分</p>
+    <button onclick="goHome()">🔙 回首頁</button>
+  </div>
+
+  <script src="lesson4to6-data.js"></script>
+  <script src="lesson4to6-logic.js"></script>
+</body>
+</html>
+
+
+  <script>
+    const allLessons = {
+    "第7課": [
+  { jp: "切ります", zh: "切、剪" },
+  { jp: "送ります", zh: "寄、送" },
+  { jp: "あげます", zh: "給" },
+  { jp: "もらいます", zh: "收到、得到" },
+  { jp: "貸します", zh: "借出" },
+  { jp: "借ります", zh: "借入" },
+  { jp: "教えます", zh: "教" },
+  { jp: "習います", zh: "學習" },
+  { jp: "かけます", zh: "打（電話）" },
+  { jp: "手", zh: "手" },
+  { jp: "はし", zh: "筷子" },
+  { jp: "スプーン", zh: "湯匙" },
+  { jp: "ナイフ", zh: "刀子" },
+  { jp: "フォーク", zh: "叉子" },
+  { jp: "はさみ", zh: "剪刀" },
+  { jp: "ファックス", zh: "傳真" },
+  { jp: "ワープロ", zh: "文字處理機" },
+  { jp: "パソコン", zh: "個人電腦" },
+  { jp: "パンチ", zh: "打孔機" },
+  { jp: "ホッチキス", zh: "釘書機" },
+  { jp: "セロテープ", zh: "透明膠帶" },
+  { jp: "消しゴム", zh: "橡皮擦" },
+  { jp: "紙", zh: "紙" },
+  { jp: "花", zh: "花" },
+  { jp: "シャツ", zh: "襯衫" },
+  { jp: "プレゼント", zh: "禮物" },
+  { jp: "荷物", zh: "行李" },
+  { jp: "お金", zh: "錢" },
+  { jp: "切符", zh: "票（車票等）" },
+  { jp: "クリスマス", zh: "聖誕節" },
+  { jp: "父", zh: "父親（自己的）" },
+  { jp: "母", zh: "母親（自己的）" },
+  { jp: "お父さん", zh: "父親（別人的）" },
+  { jp: "お母さん", zh: "母親（別人的）" },
+  { jp: "これから", zh: "從現在開始、接下來" },
+  { jp: "すてきですね。", zh: "好棒喔。" },
+  { jp: "いかがですか。", zh: "您覺得怎麼樣？" },
+  { jp: "いただきます。", zh: "我開動了（吃飯前）" },
+  { jp: "ごちそうさまでした。", zh: "我吃飽了（吃飯後）" },
+  { jp: "旅行", zh: "旅行" }
+     ],
+      "第5課": [
+        { jp: "行きます", zh: "去" }, { jp: "来ます", zh: "來" }, { jp: "帰ります", zh: "回去" },
+        { jp: "学校（がっこう）", zh: "學校" }, { jp: "駅（えき）", zh: "車站" }, { jp: "飛行機（ひこうき）", zh: "飛機" },
+        { jp: "船（ふね）", zh: "船" }, { jp: "電車（でんしゃ）", zh: "電車" }, { jp: "地下鉄（ちかてつ）", zh: "地下鐵" },
+        { jp: "新幹線（しんかんせん）", zh: "新幹線" }, { jp: "バス", zh: "巴士" }, { jp: "タクシー", zh: "計程車" },
+        { jp: "自転車（じてんしゃ）", zh: "腳踏車" }, { jp: "歩いて（あるいて）", zh: "走路" }, { jp: "人（ひと）", zh: "人" },
+        { jp: "友達（ともだち）", zh: "朋友" }, { jp: "彼（かれ）", zh: "他／男朋友" }, { jp: "彼女（かのじょ）", zh: "她／女朋友" },
+        { jp: "家族（かぞく）", zh: "家人" }, { jp: "一人で（ひとりで）", zh: "一個人" }, { jp: "先週（せんしゅう）", zh: "上週" },
+        { jp: "今週（こんしゅう）", zh: "這週" }, { jp: "来週（らいしゅう）", zh: "下週" }, { jp: "先月（せんげつ）", zh: "上個月" },
+        { jp: "今月（こんげつ）", zh: "這個月" }, { jp: "来月（らいげつ）", zh: "下個月" }, { jp: "去年（きょねん）", zh: "去年" },
+        { jp: "今年（ことし）", zh: "今年" }, { jp: "来年（らいねん）", zh: "明年" }, { jp: "～月（がつ）", zh: "～月" },
+        { jp: "何月（なんがつ）", zh: "幾月" }, { jp: "～日（にち）", zh: "～號／～天" }, { jp: "何日（なんにち）", zh: "幾號／幾天" },
+        { jp: "いつ", zh: "什麼時候" }, { jp: "誕生日（たんじょうび）", zh: "生日" }, { jp: "普通（ふつう）", zh: "普通（車）" },
+        { jp: "急行（きゅうこう）", zh: "快車" }, { jp: "特急（とっきゅう）", zh: "特快車" }, { jp: "ありがとう ございました", zh: "謝謝（過去式）" },
+        { jp: "どういたしまして", zh: "不客氣" }
+      ],
+     "第6課": [
+{ jp: "食べます", zh: "吃" },
+{ jp: "飲みます", zh: "喝" },
+{ jp: "吸います", zh: "吸（香菸等）" },
+{ jp: "見ます", zh: "看" },
+{ jp: "聞きます", zh: "聽" },
+{ jp: "読みます", zh: "讀" },
+{ jp: "書きます", zh: "寫" },
+{ jp: "買います", zh: "買" },
+{ jp: "取ります", zh: "拿" },
+{ jp: "売ります", zh: "賣" },
+{ jp: "撮ります", zh: "拍（照）" },
+{ jp: "します", zh: "做" },
+{ jp: "会います", zh: "見面" },
+{ jp: "電話します", zh: "打電話" },
+{ jp: "歩きます", zh: "走路" },
+{ jp: "遊びます", zh: "玩" },
+{ jp: "泳ぎます", zh: "游泳" },
+{ jp: "寝ます", zh: "睡覺" },
+{ jp: "起きます", zh: "起床" },
+{ jp: "ご飯", zh: "飯" },
+{ jp: "パン", zh: "麵包" },
+{ jp: "卵", zh: "蛋" },
+{ jp: "肉", zh: "肉" },
+{ jp: "魚", zh: "魚" },
+{ jp: "野菜", zh: "蔬菜" },
+{ jp: "果物", zh: "水果" },
+{ jp: "水", zh: "水" },
+{ jp: "お茶", zh: "茶" },
+{ jp: "紅茶", zh: "紅茶" },
+{ jp: "牛乳", zh: "牛奶" },
+{ jp: "ジュース", zh: "果汁" },
+{ jp: "ビール", zh: "啤酒" },
+{ jp: "コーヒー", zh: "咖啡" },
+{ jp: "たばこ", zh: "香菸" },
+{ jp: "てがみ", zh: "信" },
+{ jp: "レポート", zh: "報告" },
+{ jp: "しゃしん", zh: "照片" },
+{ jp: "ビデオ", zh: "影片、錄影帶" },
+{ jp: "映画", zh: "電影" },
+{ jp: "みせ", zh: "商店" },
+{ jp: "にわ", zh: "庭院、院子" },
+{ jp: "しゅくだい", zh: "作業" },
+{ jp: "テニス", zh: "網球" },
+{ jp: "サッカー", zh: "足球" },
+{ jp: "[お]はなみ", zh: "賞花" },
+{ jp: "なに", zh: "什麼" },
+{ jp: "いっしょに", zh: "一起" },
+{ jp: "ちょっと", zh: "一會兒、一點點" },
+{ jp: "いつも", zh: "總是" },
+{ jp: "ときどき", zh: "有時" },
+{ jp: "それから", zh: "然後" },
+{ jp: "ええ", zh: "是的" },
+{ jp: "いいですね。", zh: "好啊" },
+{ jp: "わかりました。", zh: "我明白了" },
+{ jp: "なんですか。", zh: "什麼事？" },
+{ jp: "じゃ、また[あした]。", zh: "那麼，明天再見。" }
+]
+    };
+   let lockedWords = [], currentWord = {}, score = 0, correctCount = 0, totalCount = 0;
+    let highscore = localStorage.getItem("highscore") || 0;
+    let mode = "jpToZh";
+    let quizType = "choice";
+
+    function changeMode() {
+      mode = document.getElementById("modeSelect").value;
+    }
+
+    function changeType() {
+      quizType = document.getElementById("typeSelect").value;
+    }
+
+    function updateWordList() {
+      const selectedLesson = document.getElementById("lessonSelect").value;
+      const container = document.getElementById("wordSelection");
+      container.innerHTML = "";
+
+      if (!selectedLesson || !allLessons[selectedLesson]) return;
+
+      const wordList = allLessons[selectedLesson];
+      const div = document.createElement("div");
+      div.className = "lesson";
+      const idPrefix = selectedLesson.replace("第", "lesson").replace("課", "");
+
+      div.innerHTML = `<h3>${selectedLesson} <button onclick="uncheckAll('${idPrefix}')">全部取消</button></h3>`;
+
+      wordList.forEach((word, i) => {
+        const id = `${idPrefix}_word${i}`;
+        div.innerHTML += `<label><input type="checkbox" id="${id}" value="${word.jp}" checked> ${word.jp}（${word.zh}）</label><br>`;
+      });
+
+      container.appendChild(div);
+    }
+
+    function uncheckAll(prefix) {
+      const checkboxes = document.querySelectorAll(`input[id^="${prefix}_"]`);
+      checkboxes.forEach(cb => cb.checked = false);
+    }
+
+    function getSelectedWords() {
+      const lesson = document.getElementById("lessonSelect").value;
+      const prefix = lesson.replace("第", "lesson").replace("課", "");
+      return allLessons[lesson].filter((_, i) => {
+        const id = `${prefix}_word${i}`;
+        return document.getElementById(id).checked;
+      });
+    }
+
+    function startQuiz() {
+      const selected = getSelectedWords();
+      if (selected.length === 0) return alert("請至少選一個單字！");
+      lockedWords = selected;
+      document.getElementById("wordSelection").style.display = "none";
+      showNewQuestion();
+    }
+
+    function unlockSelection() {
+      document.getElementById("wordSelection").style.display = "block";
+      lockedWords = [];
+      document.getElementById("question").textContent = "← 點上方按鈕開始練習";
+      document.getElementById("options").innerHTML = "";
+      document.getElementById("result").textContent = "";
+    }
+
+    function shuffle(array) {
+      return array.sort(() => Math.random() - 0.5);
+    }
+
+    function showNewQuestion() {
+      currentWord = lockedWords[Math.floor(Math.random() * lockedWords.length)];
+      const selectedLesson = document.getElementById("lessonSelect").value;
+      const fullLessonWords = allLessons[selectedLesson];
+      const questionText = mode === "jpToZh"
+        ? `「${currentWord.jp}」是什麼意思？`
+        : `「${currentWord.zh}」的日文是什麼？`;
+      document.getElementById("question").textContent = questionText;
+      document.getElementById("result").textContent = "";
+
+      const correctAnswer = mode === "jpToZh" ? currentWord.zh : currentWord.jp;
+      let optionsPool = fullLessonWords
+        .map(w => mode === "jpToZh" ? w.zh : w.jp)
+        .filter(opt => opt !== correctAnswer);
+      const options = shuffle([correctAnswer, ...shuffle(optionsPool).slice(0, 3)]);
+
+      const optionsDiv = document.getElementById("options");
+      optionsDiv.innerHTML = "";
+
+      if (quizType === "choice") {
+        options.forEach(opt => {
+          const btn = document.createElement("button");
+          btn.textContent = opt;
+          btn.className = "option-button";
+          btn.onclick = () => checkAnswer(opt);
+          optionsDiv.appendChild(btn);
+        });
+      } else {
+        const input = document.createElement("input");
+        input.type = "text";
+        input.id = "inputAnswer";
+        input.style.fontSize = "18px";
+        input.style.padding = "5px";
+        optionsDiv.appendChild(input);
+
+        const submitBtn = document.createElement("button");
+        submitBtn.textContent = "送出";
+        submitBtn.className = "option-button";
+        submitBtn.onclick = () => {
+          const userInput = document.getElementById("inputAnswer").value.trim();
+          checkAnswer(userInput);
+        };
+        optionsDiv.appendChild(submitBtn);
+        input.focus();
+      }
+    }
+
+    function checkAnswer(answer) {
+      const correct = mode === "jpToZh" ? currentWord.zh : currentWord.jp;
+      totalCount++;
+      const isCorrect = answer.trim().toLowerCase() === correct.trim().toLowerCase();
+
+      if (isCorrect) {
+        correctCount++;
+        document.getElementById("result").textContent = "✅ 正確！";
+        score += 10;
+      } else {
+        document.getElementById("result").textContent = `❌ 錯了！正確答案是「${correct}」`;
+      }
+
+      document.getElementById("score").textContent = score;
+      document.getElementById("correct").textContent = correctCount;
+      document.getElementById("total").textContent = totalCount;
+      document.getElementById("accuracy").textContent = `${Math.round((correctCount / totalCount) * 100)}%`;
+
+      if (score > highscore) {
+        highscore = score;
+        localStorage.setItem("highscore", highscore);
+        document.getElementById("highscore").textContent = highscore;
+      }
+
+      lockedWords = lockedWords.filter(word => word !== currentWord);
+
+      if (lockedWords.length === 0) {
+        document.getElementById("quizArea").style.display = "none";
+        document.getElementById("endScreen").style.display = "block";
+        document.getElementById("finalScore").textContent = score;
+      } else {
+        setTimeout(() => showNewQuestion(), 800);
+      }
+    }
+
+    function resetScore() {
+      score = 0;
+      correctCount = 0;
+      totalCount = 0;
+      document.getElementById("score").textContent = score;
+      document.getElementById("correct").textContent = 0;
+      document.getElementById("total").textContent = 0;
+      document.getElementById("accuracy").textContent = "0%";
+      document.getElementById("result").textContent = "";
+    }
+
+    function speakWord() {
+      const speakText = currentWord.jp || "";
+      if (!speakText) return;
+
+      speechSynthesis.cancel();
+      const utterance = new SpeechSynthesisUtterance(speakText);
+      utterance.lang = 'ja-JP';
+
+      const voices = speechSynthesis.getVoices();
+      const jpVoice = voices.find(voice => voice.lang === 'ja-JP');
+      if (jpVoice) utterance.voice = jpVoice;
+      speechSynthesis.speak(utterance);
+    }
+
+    function goHome() {
+      document.getElementById("endScreen").style.display = "none";
+      document.getElementById("quizArea").style.display = "block";
+      document.getElementById("wordSelection").style.display = "block";
+      document.getElementById("question").textContent = "← 點上方按鈕開始練習";
+      document.getElementById("options").innerHTML = "";
+      document.getElementById("result").textContent = "";
+      score = 0;
+      document.getElementById("score").textContent = score;
+    }
+
+    window.onload = () => {
+      document.getElementById("highscore").textContent = highscore;
+    };
+  </script>
+<div style="margin-top: 30px;">
+  <a href="index.html">
+    <button>🔙 回首頁</button>
+  </a>
+</div>
+
+</body>
+</html>
+
+
+
+
+
+
+
 
