--- a/lesson7.html
+++ b/lesson7.html
@@ -160,22 +160,60 @@
   { jp: "ごちそうさまでした。", zh: "我吃飽了（吃飯後）" },
   { jp: "旅行", zh: "旅行" }
      ],
-      "第8課": [
-        { jp: "行きます", zh: "去" }, { jp: "来ます", zh: "來" }, { jp: "帰ります", zh: "回去" },
-        { jp: "学校（がっこう）", zh: "學校" }, { jp: "駅（えき）", zh: "車站" }, { jp: "飛行機（ひこうき）", zh: "飛機" },
-        { jp: "船（ふね）", zh: "船" }, { jp: "電車（でんしゃ）", zh: "電車" }, { jp: "地下鉄（ちかてつ）", zh: "地下鐵" },
-        { jp: "新幹線（しんかんせん）", zh: "新幹線" }, { jp: "バス", zh: "巴士" }, { jp: "タクシー", zh: "計程車" },
-        { jp: "自転車（じてんしゃ）", zh: "腳踏車" }, { jp: "歩いて（あるいて）", zh: "走路" }, { jp: "人（ひと）", zh: "人" },
-        { jp: "友達（ともだち）", zh: "朋友" }, { jp: "彼（かれ）", zh: "他／男朋友" }, { jp: "彼女（かのじょ）", zh: "她／女朋友" },
-        { jp: "家族（かぞく）", zh: "家人" }, { jp: "一人で（ひとりで）", zh: "一個人" }, { jp: "先週（せんしゅう）", zh: "上週" },
-        { jp: "今週（こんしゅう）", zh: "這週" }, { jp: "来週（らいしゅう）", zh: "下週" }, { jp: "先月（せんげつ）", zh: "上個月" },
-        { jp: "今月（こんげつ）", zh: "這個月" }, { jp: "来月（らいげつ）", zh: "下個月" }, { jp: "去年（きょねん）", zh: "去年" },
-        { jp: "今年（ことし）", zh: "今年" }, { jp: "来年（らいねん）", zh: "明年" }, { jp: "～月（がつ）", zh: "～月" },
-        { jp: "何月（なんがつ）", zh: "幾月" }, { jp: "～日（にち）", zh: "～號／～天" }, { jp: "何日（なんにち）", zh: "幾號／幾天" },
-        { jp: "いつ", zh: "什麼時候" }, { jp: "誕生日（たんじょうび）", zh: "生日" }, { jp: "普通（ふつう）", zh: "普通（車）" },
-        { jp: "急行（きゅうこう）", zh: "快車" }, { jp: "特急（とっきゅう）", zh: "特快車" }, { jp: "ありがとう ございました", zh: "謝謝（過去式）" },
-        { jp: "どういたしまして", zh: "不客氣" }
-      ],
+    "第8課": [
+  { jp: "ハンサム（な）", zh: "英俊的" },
+  { jp: "きれい（な）", zh: "漂亮的、乾淨的" },
+  { jp: "しずか（な）", zh: "安靜的" },
+  { jp: "にぎやか（な）", zh: "熱鬧的" },
+  { jp: "ゆうめい（な）", zh: "有名的" },
+  { jp: "しんせつ（な）", zh: "親切的" },
+  { jp: "げんき（な）", zh: "有精神的、健康的" },
+  { jp: "ひま（な）", zh: "空閒的" },
+  { jp: "べんり（な）", zh: "方便的" },
+  { jp: "すてき（な）", zh: "很棒的、極好的" },
+  { jp: "おおきい", zh: "大的" },
+  { jp: "ちいさい", zh: "小的" },
+  { jp: "あたらしい", zh: "新的" },
+  { jp: "ふるい", zh: "舊的" },
+  { jp: "いい（よい）", zh: "好的" },
+  { jp: "わるい", zh: "壞的" },
+  { jp: "あつい", zh: "熱的、燙的／天氣炎熱的" },
+  { jp: "さむい", zh: "寒冷的（氣溫）" },
+  { jp: "つめたい", zh: "冰冷的（接觸物）" },
+  { jp: "むずかしい", zh: "難的" },
+  { jp: "やさしい", zh: "簡單的、溫柔的" },
+  { jp: "たかい", zh: "高的、貴的" },
+  { jp: "やすい", zh: "便宜的" },
+  { jp: "ひくい", zh: "低的" },
+  { jp: "おもしろい", zh: "有趣的" },
+  { jp: "つまらない", zh: "無聊的" },
+  { jp: "おいしい", zh: "好吃的" },
+  { jp: "いそがしい", zh: "忙的" },
+  { jp: "たのしい", zh: "開心的、快樂的" },
+  { jp: "しろい", zh: "白色的" },
+  { jp: "くろい", zh: "黑色的" },
+  { jp: "あかい", zh: "紅色的" },
+  { jp: "あおい", zh: "藍色的" },
+  { jp: "さくら", zh: "櫻花" },
+  { jp: "やま", zh: "山" },
+  { jp: "まち", zh: "城市、街道" },
+  { jp: "たべもの", zh: "食物" },
+  { jp: "ところ", zh: "地方" },
+  { jp: "りょう", zh: "宿舍" },
+  { jp: "べんきょう", zh: "學習" },
+  { jp: "せいかつ", zh: "生活" },
+  { jp: "[お]しごと", zh: "工作" },
+  { jp: "どう", zh: "如何" },
+  { jp: "どんな～", zh: "什麼樣的～" },
+  { jp: "とても", zh: "非常" },
+  { jp: "あまり", zh: "不太（用於否定）" },
+  { jp: "そして", zh: "而且" },
+  { jp: "～が、～", zh: "～但是～" },
+  { jp: "おげんきですか。", zh: "你好嗎？" },
+  { jp: "そうですね。", zh: "是啊..." },
+  { jp: "そろそろ しつれいします。", zh: "差不多該告辭了。" },
+  { jp: "また いらっしゃってください。", zh: "歡迎再來。" }
+ ],
      "第9課": [
 { jp: "食べます", zh: "吃" },
 { jp: "飲みます", zh: "喝" },
