--- a/lesson7.html
+++ b/lesson7.html
@@ -215,62 +215,53 @@
   { jp: "また いらっしゃってください。", zh: "歡迎再來。" }
  ],
      "第9課": [
-{ jp: "食べます", zh: "吃" },
-{ jp: "飲みます", zh: "喝" },
-{ jp: "吸います", zh: "吸（香菸等）" },
-{ jp: "見ます", zh: "看" },
-{ jp: "聞きます", zh: "聽" },
-{ jp: "読みます", zh: "讀" },
-{ jp: "書きます", zh: "寫" },
-{ jp: "買います", zh: "買" },
-{ jp: "取ります", zh: "拿" },
-{ jp: "売ります", zh: "賣" },
-{ jp: "撮ります", zh: "拍（照）" },
-{ jp: "します", zh: "做" },
-{ jp: "会います", zh: "見面" },
-{ jp: "電話します", zh: "打電話" },
-{ jp: "歩きます", zh: "走路" },
-{ jp: "遊びます", zh: "玩" },
-{ jp: "泳ぎます", zh: "游泳" },
-{ jp: "寝ます", zh: "睡覺" },
-{ jp: "起きます", zh: "起床" },
-{ jp: "ご飯", zh: "飯" },
-{ jp: "パン", zh: "麵包" },
-{ jp: "卵", zh: "蛋" },
-{ jp: "肉", zh: "肉" },
-{ jp: "魚", zh: "魚" },
-{ jp: "野菜", zh: "蔬菜" },
-{ jp: "果物", zh: "水果" },
-{ jp: "水", zh: "水" },
-{ jp: "お茶", zh: "茶" },
-{ jp: "紅茶", zh: "紅茶" },
-{ jp: "牛乳", zh: "牛奶" },
-{ jp: "ジュース", zh: "果汁" },
-{ jp: "ビール", zh: "啤酒" },
-{ jp: "コーヒー", zh: "咖啡" },
-{ jp: "たばこ", zh: "香菸" },
-{ jp: "てがみ", zh: "信" },
-{ jp: "レポート", zh: "報告" },
-{ jp: "しゃしん", zh: "照片" },
-{ jp: "ビデオ", zh: "影片、錄影帶" },
-{ jp: "映画", zh: "電影" },
-{ jp: "みせ", zh: "商店" },
-{ jp: "にわ", zh: "庭院、院子" },
-{ jp: "しゅくだい", zh: "作業" },
-{ jp: "テニス", zh: "網球" },
-{ jp: "サッカー", zh: "足球" },
-{ jp: "[お]はなみ", zh: "賞花" },
-{ jp: "なに", zh: "什麼" },
-{ jp: "いっしょに", zh: "一起" },
-{ jp: "ちょっと", zh: "一會兒、一點點" },
-{ jp: "いつも", zh: "總是" },
-{ jp: "ときどき", zh: "有時" },
-{ jp: "それから", zh: "然後" },
-{ jp: "ええ", zh: "是的" },
-{ jp: "いいですね。", zh: "好啊" },
-{ jp: "わかりました。", zh: "我明白了" },
-{ jp: "なんですか。", zh: "什麼事？" },
-{ jp: "じゃ、また[あした]。", zh: "那麼，明天再見。" }
+"第9課": [
+  { jp: "わかります", zh: "懂、明白" },
+  { jp: "あります", zh: "有（無生命）" },
+  { jp: "好き（な）", zh: "喜歡的" },
+  { jp: "嫌い（な）", zh: "討厭的" },
+  { jp: "上手（な）", zh: "擅長的" },
+  { jp: "下手（な）", zh: "不擅長的" },
+  { jp: "料理（りょうり）", zh: "料理" },
+  { jp: "飲み物（のみもの）", zh: "飲料" },
+  { jp: "スポーツ", zh: "運動" },
+  { jp: "野球（やきゅう）", zh: "棒球" },
+  { jp: "ダンス", zh: "跳舞" },
+  { jp: "音楽（おんがく）", zh: "音樂" },
+  { jp: "歌（うた）", zh: "歌曲" },
+  { jp: "クラシック", zh: "古典音樂" },
+  { jp: "ジャズ", zh: "爵士音樂" },
+  { jp: "コンサート", zh: "音樂會" },
+  { jp: "カラオケ", zh: "卡拉OK" },
+  { jp: "歌舞伎（かぶき）", zh: "歌舞伎（日本傳統戲劇）" },
+  { jp: "絵（え）", zh: "畫" },
+  { jp: "字（じ）", zh: "字、文字" },
+  { jp: "漢字（かんじ）", zh: "漢字" },
+  { jp: "ローマ字（ろーまじ）", zh: "羅馬字" },
+  { jp: "ひらがな", zh: "平假名" },
+  { jp: "カタカナ", zh: "片假名" },
+  { jp: "用事（ようじ）", zh: "事情、事務" },
+  { jp: "約束（やくそく）", zh: "約定" },
+  { jp: "ごしゅじん", zh: "（別人的）先生、丈夫" },
+  { jp: "おっと / しゅじん", zh: "（自己的）先生、丈夫" },
+  { jp: "おくさん", zh: "（別人的）太太" },
+  { jp: "つま / かない", zh: "（自己的）太太" },
+  { jp: "子ども", zh: "小孩" },
+  { jp: "よく", zh: "常常" },
+  { jp: "だいたい", zh: "大致上、大概" },
+  { jp: "たくさん", zh: "很多" },
+  { jp: "少し（すこし）", zh: "一點點" },
+  { jp: "ぜんぜん", zh: "完全（不）" },
+  { jp: "早く、速く（はやく）", zh: "早早地、快速地" },
+  { jp: "～から", zh: "因為～" },
+  { jp: "どうして", zh: "為什麼" },
+  { jp: "残念（ですね）（ざんねん）", zh: "真遺憾啊" },
+  { jp: "もしもし", zh: "喂（電話用語）" },
+  { jp: "ああ", zh: "啊（表示明白）" },
+  { jp: "いっしょに いかがですか。", zh: "一起去如何？" },
+  { jp: "（～は）ちょっと……。", zh: "（～）有點困難……" },
+  { jp: "だめですか。", zh: "不行嗎？" },
+  { jp: "また 今度（こんど） おねがいします。", zh: "下次請再約我。" }
 ]
     };
    let lockedWords = [], currentWord = {}, score = 0, correctCount = 0, totalCount = 0;
